fix: btn content align bug

--- a/src/assets/bundles/dx.light.css
+++ b/src/assets/bundles/dx.light.css
@@ -2763,6 +2763,7 @@
   flex: 1 1 auto;
   height: 100%;
   max-height: 100%;
+  justify-content: center;
 }
 .dx-button-has-text .dx-button-content {
   overflow: hidden;
